// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`waterfall_helpers getWaterfall should return full waterfall 1`] = `
Object {
  "duration": 49660,
  "entryTransaction": Object {
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-node",
    },
    "timestamp": Object {
      "us": 1549324795784006,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 49660,
      },
      "id": "myTransactionId1",
      "name": "GET /api",
    },
  },
  "errorsCount": 1,
  "errorsPerTransaction": Object {
    "myTransactionId1": 2,
    "myTransactionId2": 3,
  },
  "items": Array [
    Object {
      "doc": Object {
        "errorsCount": 2,
        "id": "myTransactionId1",
        "name": "GET /api",
        "parent": undefined,
        "parentId": undefined,
        "serviceName": "opbeans-node",
        "timestamp": 1549324795784006,
        "transaction": Object {
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-node",
          },
          "timestamp": Object {
            "us": 1549324795784006,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 49660,
            },
            "id": "myTransactionId1",
            "name": "GET /api",
          },
        },
      },
      "docType": "transaction",
      "duration": 49660,
      "offset": 0,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "id": "mySpanIdD",
        "name": "GET opbeans-ruby:3000/api/products",
        "parent": Object {
          "doc": Object {
            "errorsCount": 2,
            "id": "myTransactionId1",
            "name": "GET /api",
            "parent": undefined,
            "parentId": undefined,
            "serviceName": "opbeans-node",
            "timestamp": 1549324795784006,
            "transaction": Object {
              "processor": Object {
                "event": "transaction",
              },
              "service": Object {
                "name": "opbeans-node",
              },
              "timestamp": Object {
                "us": 1549324795784006,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "duration": Object {
                  "us": 49660,
                },
                "id": "myTransactionId1",
                "name": "GET /api",
              },
            },
          },
          "docType": "transaction",
          "duration": 49660,
          "offset": 0,
          "skew": 0,
        },
        "parentId": "myTransactionId1",
        "serviceName": "opbeans-node",
        "span": Object {
          "parent": Object {
            "id": "myTransactionId1",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-node",
          },
          "span": Object {
            "duration": Object {
              "us": 47557,
            },
            "id": "mySpanIdD",
            "name": "GET opbeans-ruby:3000/api/products",
          },
          "timestamp": Object {
            "us": 1549324795785760,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId1",
          },
        },
        "timestamp": 1549324795785760,
      },
      "docType": "span",
      "duration": 47557,
      "offset": 1754,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "errorsCount": 3,
        "id": "myTransactionId2",
        "name": "Api::ProductsController#index",
        "parent": Object {
          "doc": Object {
            "id": "mySpanIdD",
            "name": "GET opbeans-ruby:3000/api/products",
            "parent": Object {
              "doc": Object {
                "errorsCount": 2,
                "id": "myTransactionId1",
                "name": "GET /api",
                "parent": undefined,
                "parentId": undefined,
                "serviceName": "opbeans-node",
                "timestamp": 1549324795784006,
                "transaction": Object {
                  "processor": Object {
                    "event": "transaction",
                  },
                  "service": Object {
                    "name": "opbeans-node",
                  },
                  "timestamp": Object {
                    "us": 1549324795784006,
                  },
                  "trace": Object {
                    "id": "myTraceId",
                  },
                  "transaction": Object {
                    "duration": Object {
                      "us": 49660,
                    },
                    "id": "myTransactionId1",
                    "name": "GET /api",
                  },
                },
              },
              "docType": "transaction",
              "duration": 49660,
              "offset": 0,
              "skew": 0,
            },
            "parentId": "myTransactionId1",
            "serviceName": "opbeans-node",
            "span": Object {
              "parent": Object {
                "id": "myTransactionId1",
              },
              "processor": Object {
                "event": "span",
              },
              "service": Object {
                "name": "opbeans-node",
              },
              "span": Object {
                "duration": Object {
                  "us": 47557,
                },
                "id": "mySpanIdD",
                "name": "GET opbeans-ruby:3000/api/products",
              },
              "timestamp": Object {
                "us": 1549324795785760,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "id": "myTransactionId1",
              },
            },
            "timestamp": 1549324795785760,
          },
          "docType": "span",
          "duration": 47557,
          "offset": 1754,
          "skew": 0,
        },
        "parentId": "mySpanIdD",
        "serviceName": "opbeans-ruby",
        "timestamp": 1549324795823304,
        "transaction": Object {
          "parent": Object {
            "id": "mySpanIdD",
          },
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "timestamp": Object {
            "us": 1549324795823304,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 8634,
            },
            "id": "myTransactionId2",
            "marks": Object {
              "agent": Object {
                "domComplete": 383,
                "domInteractive": 382,
                "timeToFirstByte": 14,
              },
            },
            "name": "Api::ProductsController#index",
          },
        },
      },
      "docType": "transaction",
      "duration": 8634,
      "offset": 39298,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "id": "mySpanIdA",
        "name": "Api::ProductsController#index",
        "parent": Object {
          "doc": Object {
            "errorsCount": 3,
            "id": "myTransactionId2",
            "name": "Api::ProductsController#index",
            "parent": Object {
              "doc": Object {
                "id": "mySpanIdD",
                "name": "GET opbeans-ruby:3000/api/products",
                "parent": Object {
                  "doc": Object {
                    "errorsCount": 2,
                    "id": "myTransactionId1",
                    "name": "GET /api",
                    "parent": undefined,
                    "parentId": undefined,
                    "serviceName": "opbeans-node",
                    "timestamp": 1549324795784006,
                    "transaction": Object {
                      "processor": Object {
                        "event": "transaction",
                      },
                      "service": Object {
                        "name": "opbeans-node",
                      },
                      "timestamp": Object {
                        "us": 1549324795784006,
                      },
                      "trace": Object {
                        "id": "myTraceId",
                      },
                      "transaction": Object {
                        "duration": Object {
                          "us": 49660,
                        },
                        "id": "myTransactionId1",
                        "name": "GET /api",
                      },
                    },
                  },
                  "docType": "transaction",
                  "duration": 49660,
                  "offset": 0,
                  "skew": 0,
                },
                "parentId": "myTransactionId1",
                "serviceName": "opbeans-node",
                "span": Object {
                  "parent": Object {
                    "id": "myTransactionId1",
                  },
                  "processor": Object {
                    "event": "span",
                  },
                  "service": Object {
                    "name": "opbeans-node",
                  },
                  "span": Object {
                    "duration": Object {
                      "us": 47557,
                    },
                    "id": "mySpanIdD",
                    "name": "GET opbeans-ruby:3000/api/products",
                  },
                  "timestamp": Object {
                    "us": 1549324795785760,
                  },
                  "trace": Object {
                    "id": "myTraceId",
                  },
                  "transaction": Object {
                    "id": "myTransactionId1",
                  },
                },
                "timestamp": 1549324795785760,
              },
              "docType": "span",
              "duration": 47557,
              "offset": 1754,
              "skew": 0,
            },
            "parentId": "mySpanIdD",
            "serviceName": "opbeans-ruby",
            "timestamp": 1549324795823304,
            "transaction": Object {
              "parent": Object {
                "id": "mySpanIdD",
              },
              "processor": Object {
                "event": "transaction",
              },
              "service": Object {
                "name": "opbeans-ruby",
              },
              "timestamp": Object {
                "us": 1549324795823304,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "duration": Object {
                  "us": 8634,
                },
                "id": "myTransactionId2",
                "marks": Object {
                  "agent": Object {
                    "domComplete": 383,
                    "domInteractive": 382,
                    "timeToFirstByte": 14,
                  },
                },
                "name": "Api::ProductsController#index",
              },
            },
          },
          "docType": "transaction",
          "duration": 8634,
          "offset": 39298,
          "skew": 0,
        },
        "parentId": "myTransactionId2",
        "serviceName": "opbeans-ruby",
        "span": Object {
          "parent": Object {
            "id": "myTransactionId2",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 6161,
            },
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
          },
          "timestamp": Object {
            "us": 1549324795824504,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId2",
          },
        },
        "timestamp": 1549324795824504,
      },
      "docType": "span",
      "duration": 6161,
      "offset": 40498,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "id": "mySpanIdB",
        "name": "SELECT FROM products",
        "parent": Object {
          "doc": Object {
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
            "parent": Object {
              "doc": Object {
                "errorsCount": 3,
                "id": "myTransactionId2",
                "name": "Api::ProductsController#index",
                "parent": Object {
                  "doc": Object {
                    "id": "mySpanIdD",
                    "name": "GET opbeans-ruby:3000/api/products",
                    "parent": Object {
                      "doc": Object {
                        "errorsCount": 2,
                        "id": "myTransactionId1",
                        "name": "GET /api",
                        "parent": undefined,
                        "parentId": undefined,
                        "serviceName": "opbeans-node",
                        "timestamp": 1549324795784006,
                        "transaction": Object {
                          "processor": Object {
                            "event": "transaction",
                          },
                          "service": Object {
                            "name": "opbeans-node",
                          },
                          "timestamp": Object {
                            "us": 1549324795784006,
                          },
                          "trace": Object {
                            "id": "myTraceId",
                          },
                          "transaction": Object {
                            "duration": Object {
                              "us": 49660,
                            },
                            "id": "myTransactionId1",
                            "name": "GET /api",
                          },
                        },
                      },
                      "docType": "transaction",
                      "duration": 49660,
                      "offset": 0,
                      "skew": 0,
                    },
                    "parentId": "myTransactionId1",
                    "serviceName": "opbeans-node",
                    "span": Object {
                      "parent": Object {
                        "id": "myTransactionId1",
                      },
                      "processor": Object {
                        "event": "span",
                      },
                      "service": Object {
                        "name": "opbeans-node",
                      },
                      "span": Object {
                        "duration": Object {
                          "us": 47557,
                        },
                        "id": "mySpanIdD",
                        "name": "GET opbeans-ruby:3000/api/products",
                      },
                      "timestamp": Object {
                        "us": 1549324795785760,
                      },
                      "trace": Object {
                        "id": "myTraceId",
                      },
                      "transaction": Object {
                        "id": "myTransactionId1",
                      },
                    },
                    "timestamp": 1549324795785760,
                  },
                  "docType": "span",
                  "duration": 47557,
                  "offset": 1754,
                  "skew": 0,
                },
                "parentId": "mySpanIdD",
                "serviceName": "opbeans-ruby",
                "timestamp": 1549324795823304,
                "transaction": Object {
                  "parent": Object {
                    "id": "mySpanIdD",
                  },
                  "processor": Object {
                    "event": "transaction",
                  },
                  "service": Object {
                    "name": "opbeans-ruby",
                  },
                  "timestamp": Object {
                    "us": 1549324795823304,
                  },
                  "trace": Object {
                    "id": "myTraceId",
                  },
                  "transaction": Object {
                    "duration": Object {
                      "us": 8634,
                    },
                    "id": "myTransactionId2",
                    "marks": Object {
                      "agent": Object {
                        "domComplete": 383,
                        "domInteractive": 382,
                        "timeToFirstByte": 14,
                      },
                    },
                    "name": "Api::ProductsController#index",
                  },
                },
              },
              "docType": "transaction",
              "duration": 8634,
              "offset": 39298,
              "skew": 0,
            },
            "parentId": "myTransactionId2",
            "serviceName": "opbeans-ruby",
            "span": Object {
              "parent": Object {
                "id": "myTransactionId2",
              },
              "processor": Object {
                "event": "span",
              },
              "service": Object {
                "name": "opbeans-ruby",
              },
              "span": Object {
                "duration": Object {
                  "us": 6161,
                },
                "id": "mySpanIdA",
                "name": "Api::ProductsController#index",
              },
              "timestamp": Object {
                "us": 1549324795824504,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "id": "myTransactionId2",
              },
            },
            "timestamp": 1549324795824504,
          },
          "docType": "span",
          "duration": 6161,
          "offset": 40498,
          "skew": 0,
        },
        "parentId": "mySpanIdA",
        "serviceName": "opbeans-ruby",
        "span": Object {
          "parent": Object {
            "id": "mySpanIdA",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 481,
            },
            "id": "mySpanIdB",
            "name": "SELECT FROM products",
          },
          "timestamp": Object {
            "us": 1549324795825633,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId2",
          },
        },
        "timestamp": 1549324795825633,
      },
      "docType": "span",
      "duration": 481,
      "offset": 41627,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "id": "mySpanIdC",
        "name": "SELECT FROM product",
        "parent": Object {
          "doc": Object {
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
            "parent": Object {
              "doc": Object {
                "errorsCount": 3,
                "id": "myTransactionId2",
                "name": "Api::ProductsController#index",
                "parent": Object {
                  "doc": Object {
                    "id": "mySpanIdD",
                    "name": "GET opbeans-ruby:3000/api/products",
                    "parent": Object {
                      "doc": Object {
                        "errorsCount": 2,
                        "id": "myTransactionId1",
                        "name": "GET /api",
                        "parent": undefined,
                        "parentId": undefined,
                        "serviceName": "opbeans-node",
                        "timestamp": 1549324795784006,
                        "transaction": Object {
                          "processor": Object {
                            "event": "transaction",
                          },
                          "service": Object {
                            "name": "opbeans-node",
                          },
                          "timestamp": Object {
                            "us": 1549324795784006,
                          },
                          "trace": Object {
                            "id": "myTraceId",
                          },
                          "transaction": Object {
                            "duration": Object {
                              "us": 49660,
                            },
                            "id": "myTransactionId1",
                            "name": "GET /api",
                          },
                        },
                      },
                      "docType": "transaction",
                      "duration": 49660,
                      "offset": 0,
                      "skew": 0,
                    },
                    "parentId": "myTransactionId1",
                    "serviceName": "opbeans-node",
                    "span": Object {
                      "parent": Object {
                        "id": "myTransactionId1",
                      },
                      "processor": Object {
                        "event": "span",
                      },
                      "service": Object {
                        "name": "opbeans-node",
                      },
                      "span": Object {
                        "duration": Object {
                          "us": 47557,
                        },
                        "id": "mySpanIdD",
                        "name": "GET opbeans-ruby:3000/api/products",
                      },
                      "timestamp": Object {
                        "us": 1549324795785760,
                      },
                      "trace": Object {
                        "id": "myTraceId",
                      },
                      "transaction": Object {
                        "id": "myTransactionId1",
                      },
                    },
                    "timestamp": 1549324795785760,
                  },
                  "docType": "span",
                  "duration": 47557,
                  "offset": 1754,
                  "skew": 0,
                },
                "parentId": "mySpanIdD",
                "serviceName": "opbeans-ruby",
                "timestamp": 1549324795823304,
                "transaction": Object {
                  "parent": Object {
                    "id": "mySpanIdD",
                  },
                  "processor": Object {
                    "event": "transaction",
                  },
                  "service": Object {
                    "name": "opbeans-ruby",
                  },
                  "timestamp": Object {
                    "us": 1549324795823304,
                  },
                  "trace": Object {
                    "id": "myTraceId",
                  },
                  "transaction": Object {
                    "duration": Object {
                      "us": 8634,
                    },
                    "id": "myTransactionId2",
                    "marks": Object {
                      "agent": Object {
                        "domComplete": 383,
                        "domInteractive": 382,
                        "timeToFirstByte": 14,
                      },
                    },
                    "name": "Api::ProductsController#index",
                  },
                },
              },
              "docType": "transaction",
              "duration": 8634,
              "offset": 39298,
              "skew": 0,
            },
            "parentId": "myTransactionId2",
            "serviceName": "opbeans-ruby",
            "span": Object {
              "parent": Object {
                "id": "myTransactionId2",
              },
              "processor": Object {
                "event": "span",
              },
              "service": Object {
                "name": "opbeans-ruby",
              },
              "span": Object {
                "duration": Object {
                  "us": 6161,
                },
                "id": "mySpanIdA",
                "name": "Api::ProductsController#index",
              },
              "timestamp": Object {
                "us": 1549324795824504,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "id": "myTransactionId2",
              },
            },
            "timestamp": 1549324795824504,
          },
          "docType": "span",
          "duration": 6161,
          "offset": 40498,
          "skew": 0,
        },
        "parentId": "mySpanIdA",
        "serviceName": "opbeans-ruby",
        "span": Object {
          "parent": Object {
            "id": "mySpanIdA",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 532,
            },
            "id": "mySpanIdC",
            "name": "SELECT FROM product",
          },
          "timestamp": Object {
            "us": 1549324795827905,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId2",
          },
        },
        "timestamp": 1549324795827905,
      },
      "docType": "span",
      "duration": 532,
      "offset": 43899,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "error": Object {
          "agent": Object {
            "name": "ruby",
            "version": "2",
          },
          "error": Object {
            "grouping_key": "errorGroupingKey1",
            "id": "error1",
            "log": Object {
              "message": "error message",
            },
          },
          "parent": Object {
            "id": "myTransactionId1",
          },
          "processor": Object {
            "event": "error",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "timestamp": Object {
            "us": 1549324795810000,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId1",
          },
        },
        "id": "error1",
        "message": "error message",
        "parent": Object {
          "doc": Object {
            "errorsCount": 2,
            "id": "myTransactionId1",
            "name": "GET /api",
            "parent": undefined,
            "parentId": undefined,
            "serviceName": "opbeans-node",
            "timestamp": 1549324795784006,
            "transaction": Object {
              "processor": Object {
                "event": "transaction",
              },
              "service": Object {
                "name": "opbeans-node",
              },
              "timestamp": Object {
                "us": 1549324795784006,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "duration": Object {
                  "us": 49660,
                },
                "id": "myTransactionId1",
                "name": "GET /api",
              },
            },
          },
          "docType": "transaction",
          "duration": 49660,
          "offset": 0,
          "skew": 0,
        },
        "parentId": "myTransactionId1",
        "serviceColor": "#00b3a4",
        "serviceName": "opbeans-ruby",
        "timestamp": 1549324795810000,
      },
      "docType": "error",
      "duration": 0,
      "offset": 25994,
      "skew": 0,
    },
  ],
  "rootTransaction": Object {
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-node",
    },
    "timestamp": Object {
      "us": 1549324795784006,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 49660,
      },
      "id": "myTransactionId1",
      "name": "GET /api",
    },
  },
  "serviceColors": Object {
    "opbeans-node": "#3185fc",
    "opbeans-ruby": "#00b3a4",
  },
}
`;

exports[`waterfall_helpers getWaterfall should return partial waterfall 1`] = `
Object {
  "duration": 8634,
  "entryTransaction": Object {
    "parent": Object {
      "id": "mySpanIdD",
    },
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-ruby",
    },
    "timestamp": Object {
      "us": 1549324795823304,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 8634,
      },
      "id": "myTransactionId2",
      "marks": Object {
        "agent": Object {
          "domComplete": 383,
          "domInteractive": 382,
          "timeToFirstByte": 14,
        },
      },
      "name": "Api::ProductsController#index",
    },
  },
  "errorsCount": 0,
  "errorsPerTransaction": Object {
    "myTransactionId1": 2,
    "myTransactionId2": 3,
  },
  "items": Array [
    Object {
      "doc": Object {
        "errorsCount": 3,
        "id": "myTransactionId2",
        "name": "Api::ProductsController#index",
        "parent": undefined,
        "parentId": "mySpanIdD",
        "serviceName": "opbeans-ruby",
        "timestamp": 1549324795823304,
        "transaction": Object {
          "parent": Object {
            "id": "mySpanIdD",
          },
          "processor": Object {
            "event": "transaction",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "timestamp": Object {
            "us": 1549324795823304,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "duration": Object {
              "us": 8634,
            },
            "id": "myTransactionId2",
            "marks": Object {
              "agent": Object {
                "domComplete": 383,
                "domInteractive": 382,
                "timeToFirstByte": 14,
              },
            },
            "name": "Api::ProductsController#index",
          },
        },
      },
      "docType": "transaction",
      "duration": 8634,
      "offset": 0,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "id": "mySpanIdA",
        "name": "Api::ProductsController#index",
        "parent": Object {
          "doc": Object {
            "errorsCount": 3,
            "id": "myTransactionId2",
            "name": "Api::ProductsController#index",
            "parent": undefined,
            "parentId": "mySpanIdD",
            "serviceName": "opbeans-ruby",
            "timestamp": 1549324795823304,
            "transaction": Object {
              "parent": Object {
                "id": "mySpanIdD",
              },
              "processor": Object {
                "event": "transaction",
              },
              "service": Object {
                "name": "opbeans-ruby",
              },
              "timestamp": Object {
                "us": 1549324795823304,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "duration": Object {
                  "us": 8634,
                },
                "id": "myTransactionId2",
                "marks": Object {
                  "agent": Object {
                    "domComplete": 383,
                    "domInteractive": 382,
                    "timeToFirstByte": 14,
                  },
                },
                "name": "Api::ProductsController#index",
              },
            },
          },
          "docType": "transaction",
          "duration": 8634,
          "offset": 0,
          "skew": 0,
        },
        "parentId": "myTransactionId2",
        "serviceName": "opbeans-ruby",
        "span": Object {
          "parent": Object {
            "id": "myTransactionId2",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 6161,
            },
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
          },
          "timestamp": Object {
            "us": 1549324795824504,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId2",
          },
        },
        "timestamp": 1549324795824504,
      },
      "docType": "span",
      "duration": 6161,
      "offset": 1200,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "id": "mySpanIdB",
        "name": "SELECT FROM products",
        "parent": Object {
          "doc": Object {
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
            "parent": Object {
              "doc": Object {
                "errorsCount": 3,
                "id": "myTransactionId2",
                "name": "Api::ProductsController#index",
                "parent": undefined,
                "parentId": "mySpanIdD",
                "serviceName": "opbeans-ruby",
                "timestamp": 1549324795823304,
                "transaction": Object {
                  "parent": Object {
                    "id": "mySpanIdD",
                  },
                  "processor": Object {
                    "event": "transaction",
                  },
                  "service": Object {
                    "name": "opbeans-ruby",
                  },
                  "timestamp": Object {
                    "us": 1549324795823304,
                  },
                  "trace": Object {
                    "id": "myTraceId",
                  },
                  "transaction": Object {
                    "duration": Object {
                      "us": 8634,
                    },
                    "id": "myTransactionId2",
                    "marks": Object {
                      "agent": Object {
                        "domComplete": 383,
                        "domInteractive": 382,
                        "timeToFirstByte": 14,
                      },
                    },
                    "name": "Api::ProductsController#index",
                  },
                },
              },
              "docType": "transaction",
              "duration": 8634,
              "offset": 0,
              "skew": 0,
            },
            "parentId": "myTransactionId2",
            "serviceName": "opbeans-ruby",
            "span": Object {
              "parent": Object {
                "id": "myTransactionId2",
              },
              "processor": Object {
                "event": "span",
              },
              "service": Object {
                "name": "opbeans-ruby",
              },
              "span": Object {
                "duration": Object {
                  "us": 6161,
                },
                "id": "mySpanIdA",
                "name": "Api::ProductsController#index",
              },
              "timestamp": Object {
                "us": 1549324795824504,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "id": "myTransactionId2",
              },
            },
            "timestamp": 1549324795824504,
          },
          "docType": "span",
          "duration": 6161,
          "offset": 1200,
          "skew": 0,
        },
        "parentId": "mySpanIdA",
        "serviceName": "opbeans-ruby",
        "span": Object {
          "parent": Object {
            "id": "mySpanIdA",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 481,
            },
            "id": "mySpanIdB",
            "name": "SELECT FROM products",
          },
          "timestamp": Object {
            "us": 1549324795825633,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId2",
          },
        },
        "timestamp": 1549324795825633,
      },
      "docType": "span",
      "duration": 481,
      "offset": 2329,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "id": "mySpanIdC",
        "name": "SELECT FROM product",
        "parent": Object {
          "doc": Object {
            "id": "mySpanIdA",
            "name": "Api::ProductsController#index",
            "parent": Object {
              "doc": Object {
                "errorsCount": 3,
                "id": "myTransactionId2",
                "name": "Api::ProductsController#index",
                "parent": undefined,
                "parentId": "mySpanIdD",
                "serviceName": "opbeans-ruby",
                "timestamp": 1549324795823304,
                "transaction": Object {
                  "parent": Object {
                    "id": "mySpanIdD",
                  },
                  "processor": Object {
                    "event": "transaction",
                  },
                  "service": Object {
                    "name": "opbeans-ruby",
                  },
                  "timestamp": Object {
                    "us": 1549324795823304,
                  },
                  "trace": Object {
                    "id": "myTraceId",
                  },
                  "transaction": Object {
                    "duration": Object {
                      "us": 8634,
                    },
                    "id": "myTransactionId2",
                    "marks": Object {
                      "agent": Object {
                        "domComplete": 383,
                        "domInteractive": 382,
                        "timeToFirstByte": 14,
                      },
                    },
                    "name": "Api::ProductsController#index",
                  },
                },
              },
              "docType": "transaction",
              "duration": 8634,
              "offset": 0,
              "skew": 0,
            },
            "parentId": "myTransactionId2",
            "serviceName": "opbeans-ruby",
            "span": Object {
              "parent": Object {
                "id": "myTransactionId2",
              },
              "processor": Object {
                "event": "span",
              },
              "service": Object {
                "name": "opbeans-ruby",
              },
              "span": Object {
                "duration": Object {
                  "us": 6161,
                },
                "id": "mySpanIdA",
                "name": "Api::ProductsController#index",
              },
              "timestamp": Object {
                "us": 1549324795824504,
              },
              "trace": Object {
                "id": "myTraceId",
              },
              "transaction": Object {
                "id": "myTransactionId2",
              },
            },
            "timestamp": 1549324795824504,
          },
          "docType": "span",
          "duration": 6161,
          "offset": 1200,
          "skew": 0,
        },
        "parentId": "mySpanIdA",
        "serviceName": "opbeans-ruby",
        "span": Object {
          "parent": Object {
            "id": "mySpanIdA",
          },
          "processor": Object {
            "event": "span",
          },
          "service": Object {
            "name": "opbeans-ruby",
          },
          "span": Object {
            "duration": Object {
              "us": 532,
            },
            "id": "mySpanIdC",
            "name": "SELECT FROM product",
          },
          "timestamp": Object {
            "us": 1549324795827905,
          },
          "trace": Object {
            "id": "myTraceId",
          },
          "transaction": Object {
            "id": "myTransactionId2",
          },
        },
        "timestamp": 1549324795827905,
      },
      "docType": "span",
      "duration": 532,
      "offset": 4601,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "mark": "domInteractive",
      },
      "docType": "agentMark",
      "duration": 0,
      "offset": 382000,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "mark": "domComplete",
      },
      "docType": "agentMark",
      "duration": 0,
      "offset": 383000,
      "skew": 0,
    },
    Object {
      "doc": Object {
        "mark": "timeToFirstByte",
      },
      "docType": "agentMark",
      "duration": 0,
      "offset": 14000,
      "skew": 0,
    },
  ],
  "rootTransaction": Object {
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-node",
    },
    "timestamp": Object {
      "us": 1549324795784006,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 49660,
      },
      "id": "myTransactionId1",
      "name": "GET /api",
    },
  },
  "serviceColors": Object {
    "opbeans-ruby": "#3185fc",
  },
}
`;

exports[`waterfall_helpers getWaterfallItems should handle cyclic references 1`] = `
Array [
  Object {
    "doc": Object {
      "id": "a",
      "parent": undefined,
      "timestamp": 10,
    },
    "docType": "transaction",
    "offset": 0,
    "skew": 0,
  },
  Object {
    "doc": Object {
      "id": "b",
      "parent": Object {
        "doc": Object {
          "id": "a",
          "parent": undefined,
          "timestamp": 10,
        },
        "docType": "transaction",
        "offset": 0,
        "skew": 0,
      },
      "parentId": "a",
      "timestamp": 20,
    },
    "docType": "span",
    "offset": 10,
    "skew": 0,
  },
]
`;

exports[`waterfall_helpers getWaterfallItems should order items correctly 1`] = `
Array [
  Object {
    "doc": Object {
      "errorsCount": 0,
      "id": "a",
      "name": "APIRestController#products",
      "parent": undefined,
      "serviceName": "opbeans-java",
      "timestamp": 1536763736366000,
      "transaction": Object {},
    },
    "docType": "transaction",
    "duration": 9480,
    "offset": 0,
    "skew": 0,
  },
  Object {
    "doc": Object {
      "id": "b",
      "name": "GET [0:0:0:0:0:0:0:1]",
      "parent": Object {
        "doc": Object {
          "errorsCount": 0,
          "id": "a",
          "name": "APIRestController#products",
          "parent": undefined,
          "serviceName": "opbeans-java",
          "timestamp": 1536763736366000,
          "transaction": Object {},
        },
        "docType": "transaction",
        "duration": 9480,
        "offset": 0,
        "skew": 0,
      },
      "parentId": "a",
      "serviceName": "opbeans-java",
      "span": Object {
        "transaction": Object {
          "id": "a",
        },
      },
      "timestamp": 1536763736368000,
    },
    "docType": "span",
    "duration": 4694,
    "offset": 2000,
    "skew": 0,
  },
  Object {
    "doc": Object {
      "errorsCount": 0,
      "id": "c",
      "name": "APIRestController#productsRemote",
      "parent": Object {
        "doc": Object {
          "id": "b",
          "name": "GET [0:0:0:0:0:0:0:1]",
          "parent": Object {
            "doc": Object {
              "errorsCount": 0,
              "id": "a",
              "name": "APIRestController#products",
              "parent": undefined,
              "serviceName": "opbeans-java",
              "timestamp": 1536763736366000,
              "transaction": Object {},
            },
            "docType": "transaction",
            "duration": 9480,
            "offset": 0,
            "skew": 0,
          },
          "parentId": "a",
          "serviceName": "opbeans-java",
          "span": Object {
            "transaction": Object {
              "id": "a",
            },
          },
          "timestamp": 1536763736368000,
        },
        "docType": "span",
        "duration": 4694,
        "offset": 2000,
        "skew": 0,
      },
      "parentId": "b",
      "serviceName": "opbeans-java",
      "timestamp": 1536763736369000,
      "transaction": Object {},
    },
    "docType": "transaction",
    "duration": 3581,
    "offset": 3000,
    "skew": 0,
  },
  Object {
    "doc": Object {
      "id": "d",
      "name": "SELECT",
      "parent": Object {
        "doc": Object {
          "errorsCount": 0,
          "id": "c",
          "name": "APIRestController#productsRemote",
          "parent": Object {
            "doc": Object {
              "id": "b",
              "name": "GET [0:0:0:0:0:0:0:1]",
              "parent": Object {
                "doc": Object {
                  "errorsCount": 0,
                  "id": "a",
                  "name": "APIRestController#products",
                  "parent": undefined,
                  "serviceName": "opbeans-java",
                  "timestamp": 1536763736366000,
                  "transaction": Object {},
                },
                "docType": "transaction",
                "duration": 9480,
                "offset": 0,
                "skew": 0,
              },
              "parentId": "a",
              "serviceName": "opbeans-java",
              "span": Object {
                "transaction": Object {
                  "id": "a",
                },
              },
              "timestamp": 1536763736368000,
            },
            "docType": "span",
            "duration": 4694,
            "offset": 2000,
            "skew": 0,
          },
          "parentId": "b",
          "serviceName": "opbeans-java",
          "timestamp": 1536763736369000,
          "transaction": Object {},
        },
        "docType": "transaction",
        "duration": 3581,
        "offset": 3000,
        "skew": 0,
      },
      "parentId": "c",
      "serviceName": "opbeans-java",
      "span": Object {
        "transaction": Object {
          "id": "c",
        },
      },
      "timestamp": 1536763736371000,
    },
    "docType": "span",
    "duration": 210,
    "offset": 5000,
    "skew": 0,
  },
  Object {
    "doc": Object {
      "id": "b2",
      "name": "GET [0:0:0:0:0:0:0:1]",
      "parent": Object {
        "doc": Object {
          "errorsCount": 0,
          "id": "a",
          "name": "APIRestController#products",
          "parent": undefined,
          "serviceName": "opbeans-java",
          "timestamp": 1536763736366000,
          "transaction": Object {},
        },
        "docType": "transaction",
        "duration": 9480,
        "offset": 0,
        "skew": 0,
      },
      "parentId": "a",
      "serviceName": "opbeans-java",
      "span": Object {
        "transaction": Object {
          "id": "a",
        },
      },
      "timestamp": 1536763736367000,
    },
    "docType": "span",
    "duration": 4694,
    "offset": 1000,
    "skew": 0,
  },
]
`;
